# Build-Systems-

./: README.md
Cmake_Course/Session0_Overview/: CMakeLists.txt  Prerequietes.txt   main.cpp
Cmake_Course/Session1/: CMakeLists.txt  Contnet.txt  main.cpp
Cmake_Course/Session1/src/: calc.cpp
Cmake_Course/Session2/: CMakeLists.txt  Content.txt  main.cpp
Cmake_Course/Session2/lib/: CMakeLists.txt  Wifi.cpp  Wifi.hpp
Cmake_Course/Session2/src/: calc.cpp
Make_Course/S1_Basics/: Makefile  analysis.py  cprogram  log.txt  test.c
Make_Course/S2_Functions/: Makefile  runprogram
Make_Course/S3_Loops/: Makefile  runprogram1  test.c  test2.c  test2.h
Make_Course/S4_phony_include/: Makefile
Make_Course/S5_static_patterns/: Makefile
